--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-template",
+  "name": "@valantic/vue-styleguide",
   "version": "8.0.0",
   "description": "A customized Vue.js project template",
   "type": "module",
