--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "postcss": "~8.5.3",
     "postcss-html": "~1.8.0",
     "postcss-scss": "~4.0.9",
+    "prettier": "~3.2.5",
     "sass": "~1.85.1",
     "stylelint": "~16.14.1",
     "stylelint-config-valantic": "~9.0.0",
