--- a/package.json
+++ b/package.json
@@ -48,25 +48,28 @@
     "vue": "~3.5.13"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "~4.3.0",
+    "@eslint/eslintrc": "~3.3.1",
+    "@eslint/js": "~9.36.0",
+    "@trivago/prettier-plugin-sort-imports": "~5.2.2",
     "@types/body-scroll-lock": "~3.1.2",
     "@types/node": "~22.13.5",
     "@types/resize-observer-browser": "~0.1.11",
-    "@typescript-eslint/eslint-plugin": "~8.21.0",
-    "@typescript-eslint/parser": "~8.21.0",
     "@vitejs/plugin-vue": "~5.2.1",
     "@vue/eslint-config-typescript": "~13.0.0",
     "@vue/test-utils": "~2.4.6",
     "autoprefixer": "~10.4.20",
     "cssnano": "~7.0.6",
-    "eslint": "~8.56.0",
+    "eslint": "~9.36.0",
     "eslint-config-airbnb-base": "~15.0.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-config-valantic": "~16.0.1",
-    "eslint-import-resolver-typescript": "~3.6.3",
-    "eslint-import-resolver-vite": "~1.1.0",
-    "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-vue": "~9.32.0",
+    "eslint-config-prettier": "~10.1.8",
+    "eslint-config-valantic": "~18.0.0",
+    "eslint-import-resolver-typescript": "~4.4.4",
+    "eslint-import-resolver-vite": "~2.1.0",
+    "eslint-plugin-import": "~2.32.0",
+    "eslint-plugin-jsdoc": "~60.5.0",
+    "eslint-plugin-unicorn": "~61.0.2",
+    "eslint-plugin-vue": "~10.5.0",
+    "globals": "~16.4.0",
     "husky": "~9.1.7",
     "jsdom": "~25.0.1",
     "postcss": "~8.5.3",
@@ -78,6 +81,7 @@
     "stylelint-config-valantic": "~9.0.0",
     "svgo": "~3.3.2",
     "typescript": "~5.7.3",
+    "typescript-eslint": "~8.45.0",
     "vite-plugin-image-optimizer": "~1.1.8",
     "vite-plugin-markdown": "~2.2.0",
     "vitest": "~3.0.7",
