--- a/package.json
+++ b/package.json
@@ -41,26 +41,18 @@
   },
   "homepage": "https://github.com/valantic/vue-styleguide",
   "dependencies": {
-    "@popperjs/core": "~2.11.8",
-    "body-scroll-lock": "~4.0.0-beta.0",
-    "the-new-css-reset": "~1.11.3",
-    "vite": "~7.1.7",
     "vue": "~3.5.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "~3.3.1",
     "@eslint/js": "~9.36.0",
     "@trivago/prettier-plugin-sort-imports": "~5.2.2",
-    "@types/body-scroll-lock": "~3.1.2",
     "@types/node": "~24.6.1",
-    "@types/resize-observer-browser": "~0.1.11",
     "@vitejs/plugin-vue": "~6.0.1",
-    "@vue/eslint-config-typescript": "~14.6.0",
     "@vue/test-utils": "~2.4.6",
     "autoprefixer": "~10.4.21",
     "cssnano": "~7.1.1",
     "eslint": "~9.36.0",
-    "eslint-config-airbnb-base": "~15.0.0",
     "eslint-config-prettier": "~10.1.8",
     "eslint-config-valantic": "~18.0.0",
     "eslint-import-resolver-typescript": "~4.4.4",
@@ -78,14 +70,17 @@
     "prettier": "~3.6.2",
     "sass": "~1.93.2",
     "stylelint": "~16.24.0",
-    "stylelint-config-valantic": "~9.0.0",
+    "stylelint-config-valantic": "~9.1.0",
     "svgo": "~4.0.0",
+    "the-new-css-reset": "~1.11.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "~8.45.0",
+    "vite": "~7.1.8",
     "vite-plugin-image-optimizer": "~2.0.2",
     "vite-plugin-markdown": "~2.2.0",
     "vitest": "~3.2.4",
     "vue-component-type-helpers": "~3.1.0",
+    "vue-eslint-parser": "~10.2.0",
     "vue-router": "~4.5.1",
     "vue-tsc": "~3.1.0"
   },
