--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "~3.3.1",
     "@eslint/js": "~9.36.0",
+    "@faker-js/faker": "~10.3.0",
     "@trivago/prettier-plugin-sort-imports": "~5.2.2",
     "@types/node": "~24.6.1",
     "@vitejs/plugin-vue": "~6.0.1",
