--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint-staged": "lint-staged",
     "test": "npm run lint && npm run test:unit -- --watch=false",
     "test:unit": "vitest --dir tests",
+    "build": "vite build --mode=app",
+    "build:icons": "svg-sprite --config .svg-sprite.json src/assets/icons/*.svg; node ./update-ts-icon-type",
     "build:watch": "npm run build -- --watch",
     "serve": "vite preview",
     "prepare": "husky",
@@ -76,6 +78,7 @@
     "sass": "~1.93.2",
     "stylelint": "~16.24.0",
     "stylelint-config-valantic": "~9.1.0",
+    "svg-sprite": "~2.0.4",
     "svgo": "~4.0.0",
     "the-new-css-reset": "~1.11.3",
     "typescript": "~5.9.3",
